--- a/src/SarifWeb/Content/Validator.css
+++ b/src/SarifWeb/Content/Validator.css
@@ -129,8 +129,12 @@
 
 #validatorFooter {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     margin-top: 4px;
+}
+
+#resultDetails {
+    font-family: var(--content-font-family);
 }
 
 .ui-selectmenu-menu .ui-menu {
