Hyperlink collaborator logos

--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -55,12 +55,24 @@
         The SARIF project is supported by a group of industry contributors.
     </div>
     <div id="collabSectionButtons" role="list" aria-labelledby="collabSectionTitle">
-        <img role="listitem" aria-label="Kestrel Technology" src="~/Images/Logos/KestrelTechnology.png" alt="Kestrel Technology" />
-        <img role="listitem" aria-label="GrammaTech" src="~/Images/Logos/GrammaTech.png" alt="GrammaTech" />
-        <img role="listitem" aria-label="Micro Focus" src="~/Images/Logos/MicroFocus.png" alt="Micro Focus" />
-        <img role="listitem" aria-label="Microsoft" src="~/Images/Logos/Microsoft.png" alt="Microsoft" />
-        <img role="listitem" aria-label="Semmle" src="~/Images/Logos/Semmle.png" alt="Semmle" />
-        <img role="listitem" aria-label="SWAMP" src="~/Images/Logos/SWAMP.png" alt="SWAMP" />
+        <a href="http://www.kestreltechnology.com" target="_blank">
+            <img role="listitem" aria-label="Kestrel Technology" src="~/Images/Logos/KestrelTechnology.png" alt="Kestrel Technology" />
+        </a>
+        <a href="https://www.grammatech.com/" target="_blank">
+            <img role="listitem" aria-label="GrammaTech" src="~/Images/Logos/GrammaTech.png" alt="GrammaTech" />
+        </a>
+        <a href="https://www.microfocus.com/#" target="_blank">
+            <img role="listitem" aria-label="Micro Focus" src="~/Images/Logos/MicroFocus.png" alt="Micro Focus" />
+        </a>
+        <a href="https://www.microsoft.com/" target="_blank">
+            <img role="listitem" aria-label="Microsoft" src="~/Images/Logos/Microsoft.png" alt="Microsoft" />
+        </a>
+        <a href="https://semmle.com/" target="_blank">
+            <img role="listitem" aria-label="Semmle" src="~/Images/Logos/Semmle.png" alt="Semmle" />
+        </a>
+        <a href="https://continuousassurance.org/" target="_blank">
+            <img role="listitem" aria-label="SWAMP" src="~/Images/Logos/SWAMP.png" alt="SWAMP" />
+        </a>
     </div>
 </section>
 
