Add React component to viewers.

--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -230,6 +230,22 @@
                 <button role="button" aria-label="View VS Code Viewer extension source code" href="https://github.com/Microsoft/sarif-vscode-extension/" target="_blank" class="sarifweb-button">Source</button>
             </div>
         </div>
+
+        <div role="listitem" class="viewer-card">
+            <div id="webViewerCardTitle" role="heading" aria-level="3" class="viewer-title">
+                React component
+            </div>
+            <div class="viewer-description">
+                A React-based component for viewing SARIF files.
+            </div>
+            <div class="viewer-screenshot">
+                <img id="screenshot03" src="~/Images/Screenshots/WebViewer.thumbnail.jpeg" index="2" coloration="dark" role="button" aria-labelledby="webViewerCardTitle" alt="React component" />
+            </div>
+            <div class="viewer-buttons">
+                <button role="button" aria-label="Try the React component" href="http://sarifviewer.azurewebsites.net/" target="_blank" class="sarifweb-button">Try</button>
+                <button role="button" aria-label="View React component source code" href="https://github.com/Microsoft/sarif-web-component" target="_blank" class="sarifweb-button">Source</button>
+            </div>
+        </div>
     </div>
 </section>
 
@@ -247,7 +263,8 @@
 
             imageGallery = [
                 "screenshot01",
-                "screenshot02"
+                "screenshot02",
+                "screenshot03"
             ];
         }
 
