--- a/src/SarifWeb/Content/ImageViewer.css
+++ b/src/SarifWeb/Content/ImageViewer.css
@@ -81,7 +81,7 @@
 }
 
 .button-left {
-    left: 0%;
+    left: 0;
     position: absolute;
     top: 50%;
     transform: translate(0%, -50%);
@@ -90,7 +90,7 @@
 
 .button-right {
     position: absolute;
-    right: 0%;
+    right: 0;
     top: 50%;
     transform: translate(0%, -50%);
     -ms-transform: translate(0%, -50%);
