Update to SDK 2.1 rtm.0

--- a/src/SarifWeb/Views/ValidationUi/Index.cshtml
+++ b/src/SarifWeb/Views/ValidationUi/Index.cshtml
@@ -535,7 +535,7 @@
                         $dropForm.removeClass("is-busy");
                     },
                     success: function (data) {
-                        if (data.ExitCode <= 0) {
+                        if (data.StandardError === "") {
                             $dropForm.addClass("is-complete");
 
                             setTimeout(function () {
